python/testData/inspections/addFunctionToPackageInFromImport/addFunctionToPackageInFromImport.py
from mypack import <error descr="Cannot find reference 'foo' in '__init__.py'"><caret>foo</error>

a = foo()